<resources>
    <string name="app_name">Money Well Spent</string>
    <string name="balance">Balance</string>
    <string name="expense">Expense</string>
    <string name="you_do_not_have_any_transactions">You do not have any transactions</string>
    <string name="no_transactions">No Transactions</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="share_app">Share App</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="credit">CREDIT</string>
    <string name="debit">DEBIT</string>
    <string name="category">Category</string>
    <string name="payee_name">Payee Name</string>
    <string name="date">Date</string>
    <string name="amount_paid">Amount</string>
    <string name="bank_name">Bank Name</string>
    <string name="emoji">Emoji</string>
    <string name="custom_expense">Custom Expense</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Update</string>
    <string name="edit_transaction">Edit Transaction</string>
</resources>